[package]
name = "solana-distance"
edition = "2021"
version = "1.0.0"

[dependencies]
solana-rpc-client = "3.0.6"
solana-rpc-client-types = "3.0.6"
solana-keypair = "3.0.1"
tokio = {  version = "1.47.0", features = ["io-util"] }
rand = "0.9.2"
quinn = "0.11.9"
clap = {  version = "4.5.0", features = ["derive"] }
rustls = { version = "0.23.27" }
reqwest = { version = "0.12.24"}
serde_json = { version = "1.0.145" }